[Cairo] Text extent of shadowed text is calculated incorrectly https://bugs.webkit.org/show_bug.cgi?id=65035

Source/WebCore:

Reviewed by Martin Robinson.

No new tests. This is already covered by fast/canvas/fillText-shadow.html.

Correct determine the size of rendered text using x and y bearing from the font
extents.

* platform/graphics/cairo/FontCairo.cpp:
(WebCore::drawGlyphsShadow): Use the x and y bearing to calculate text extents.
This gives a more accurate sizing and avoids clipping the edges of the shadow.

LayoutTests:

Reviewed by Martin Robinson

* platform/gtk/Skipped: Unskip a test that is now passing.

Canonical link: https://commits.webkit.org/98657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111110 268f45cc-cd09-0410-ab3c-d52691b4dbfc